--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "css-loader": "^7.1.2",
+    "firebase": "^10.12.2",
+    "formik": "^2.4.6",
+    "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "web-vitals": "^2.1.4",
+    "webpack-cli": "^5.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
